maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:35: error: overriding method gauche in class AbstractBuggle of type ()Unit;
 method gauche needs `override' modifier
def gauche() : Boolean ={
    ^